Fix header text spacing

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -33,7 +33,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   align-items: center;
-  margin-left: 16px;
+  padding-left: 16px;
 }
 
 .container {
